--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <title>버그 수정 중</title>
-=======
-    <title>메인은 그대로 진행!</title>
->>>>>>> 56e43c8cad857cae204a0d89c533bfd4c78323a0
+    <title>이건 새로운 기능!</title>
 </head>
 
 <body>
-    <p>새로운 기능입니다!</p>
+    <p>충돌이 날 거야...!</p>
 </body>
 
 </html>
