--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>메인은 그대로 진행!</title>
+    <title>충돌이 날까?</title>
 </head>
 
 <body>
-    <p>새로운 기능입니다!</p>
+    <p>메인 브랜치 입니다!</p>
 </body>
 
 </html>
